[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = { version = "0.4.24", features = ["serde", "rustc-serialize"] }
clap = { version = "4.3.0", features = ["derive"] }
glob = "0.3.1"
hyper = { version = "0.14.26", features = ["full"] }
log = "0.4.18"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls", "json", "serde_json", "gzip", "deflate"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = "4.1.0"
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
